import { CONFIG } from '../config';

describe('PageActions/config.js', () => {
  afterEach(() => jest.clearAllMocks());

  describe('Smoke Test', () => {
    it('should exists', () => {
      expect(typeof CONFIG).toBe('object');
    });
  });

  describe('setValue', () => {
    it('should exists', () => {
      expect(typeof CONFIG.setValue).toBe('object');
    });
  });

  describe('value', () => {
    it('should exists', () => {
      expect(typeof CONFIG.value).toBe('object');
    });

    describe('folderChildren', () => {
      it('should return a particular propType shape', () => {
        expect(CONFIG.value.folderChildren({ folderId: 1 })).toMatchSnapshot();
      });
    });
    describe('parentNodeId', () => {
      it('should return a particular propType shape', () => {
        expect(CONFIG.value.parentNodeId({ id: 1 })).toMatchSnapshot();
      });
    });
  });
});
